--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!--Google Fonts-->
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow|Roboto+Condensed:400,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
   <!--Font Awesome-->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/font-awesome-animation.min.css" />
@@ -86,18 +87,18 @@
         <div class="container intro">
             <div class="intro-title centered">
                 <h2 class="bs">
-                    I have a passion for web development <br />
-                    with a focus on the user experience.
+                    Full stack web developer with
+                    a passion for frontend and UX.
                 </h2>
             </div>
             <div class="intro-blurb">
                 <div class="row">
                     <div class="col-md-6">
                         <p class="lead">
-                            An unusual origin story for my interest in web development was created while playing a video game, <strong>Neopets</strong>.
-                            The site allowed users to customize a page for their pet and I wanted to have the best webpage for my Neopet.
+                            My interest in web development originated at a young age while playing the online video game, <strong>Neopets</strong>, where customizing my pet and store's HTML page took priority over the actual game.
                         </p>
                         <p class="lead">
+                            Since then, I have guided this interest into both a career and hobby.
                             I graduated from the University of Alabama in December 2014 with a degree in Management Information Systems. The following month in January 2015, I began working at a marketing firm, 2-COM,
                             where I serve as lead software developer on client sites.
                         </p>
@@ -114,7 +115,7 @@
     </svg>
     <section id="projects" class="bs">
         <div class="container centered">
-            <h2>Take a look at some of my work.</h2>
+            <h2>Take a look at some projects that I have worked on</h2>
         </div>
         <div class="row ts">
             <ul class="portfolio">
