Hover box color contrast

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                               <p>
                                   I assisted in developing a digital Wholesale Product Guide that VF Imagewear, Inc. utilizes across all brands.
                                   After a successful implementation, VF Imagewear, Inc. decided to discontinue their print version and reference this site as the source.
-                                  I am in the process of gathering requirements for version 2.0 that will continue to enhance the product and meet their customers' needs.
+                                  I am in the process of gathering requirements for version 2.0.
                               </p>
                             </div>
                             <div class="item-icons">
@@ -317,7 +317,7 @@
                                 <p>
                                     I worked alongside an internal team to develop a proprietary e-commerce platform for 2-COM's clients.
                                     My major contributions include creating a front-end template, multi-lingual capabilities, and order reporting.
-                                    I experimented with new technologies such as NodeJS, AngularJS and MongoDB, while interacting with NetSuite's and 2-COM's database system.
+                                    Technologies involved were NodeJS, AngularJS and MongoDB, alongside NetSuite's and 2-COM's database system.
                                 </p>
                             </div>
                             <div class="item-icons">
