Remove link icon on hover logos

--- a/index.html
+++ b/index.html
@@ -123,19 +123,13 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Bulwark FR</h4>
+                                <h4 data-link="http://bulwark.com/calculator">Bulwark FR</h4>
                                 <p>
                                     I recently implemented a redesign of the site and regularly manage site updates as requested by the client.
                                     I also created a Calculator application that allows users to determine which piece of clothing they needed to achieve a certain Fire-Resistant level for their jobs.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://bulwark.com/Calculator" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -155,18 +149,12 @@
                         </div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Horace Small</h4>
+                                <h4 data-link="http://horacesmall.com">Horace Small</h4>
                                 <p>
                                     I am responsible for maintaining site updates that include event updates, product feature updates, and image changes.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://horacesmall.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -185,18 +173,12 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Red Kap Automotive</h4>
+                                <h4 data-link="http://redkapautomotive.com">Red Kap Automotive</h4>
                                 <p>
                                   This site continously features promotional pages that I create, as well as various product feature changes, image updates, and other client needs.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://redkapautomotive.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -215,7 +197,7 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                              <h4>VF Imagewear</h4>
+                              <h4 data-link="http://wpg.vfimagewear.com">VF Imagewear</h4>
                               <p>
                                   I assisted in developing a digital Wholesale Product Guide that VF Imagewear, Inc. utilizes across all brands.
                                   After a successful implementation, VF Imagewear, Inc. decided to discontinue their print version and reference this site as the source.
@@ -223,12 +205,6 @@
                               </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://wpg.vfimagewear.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -247,19 +223,13 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Yanmar Tractors</h4>
+                                <h4 data-link="http://yanmartractor.com">Yanmar Tractors</h4>
                                 <p>
                                     I regularly maintain pricing and promotional changes throughout the year in accordance with Yanmar Tractor's current deals.
                                     I am also responsible for any site maintenance or new images.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://yanmartractor.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -278,19 +248,13 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Columbia</h4>
+                                <h4 data-link="http://columbiaequip.com">Columbia</h4>
                                 <p>
                                     I assisted in developing this multi-lingual site for Columbia by implementing several pieces of functionality including the distributor locator, responsive mobile menu, and dealer locator administrative tool.
                                     Any issue with the locator, managing new/existing distributors, styling, or financing information updates fall under my responsibilities.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://columbiaequip.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal test" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -309,7 +273,7 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>2-COM</h4>
+                                <h4 data-link="http://2-com.net">2-COM</h4>
                                 <p>
                                     I worked alongside an internal team to develop a proprietary e-commerce platform for 2-COM's clients.
                                     My major contributions include creating a front-end template, multi-lingual capabilities, and order reporting.
@@ -317,12 +281,6 @@
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://2-com.net" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
@@ -341,19 +299,13 @@
                         <div class="item-background"></div>
                         <div class="item-description">
                             <div class="item-details">
-                                <h4>Cub Cadet</h4>
+                                <h4 data-link="http://cubcadetondemandmarketing.com">Cub Cadet</h4>
                                 <p>
                                     This is the first instance of 2-COM's proprietary e-commerce platform.
                                     For this instance, I assisted in managing the outsourced team to ensure the quality of deliverables and effective code.
                                 </p>
                             </div>
                             <div class="item-icons">
-                                <a class="icon-link" href="http://cubcadetondemandmarketing.com" target="_blank">
-                                    <span class="fa-stack fa-lg faa-parent animated-hover">
-                                        <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fa fa-link fa-stack-1x"></i>
-                                    </span>
-                                </a>
                                 <div class="icon-modal" data-toggle="modal" data-target="#myModal">
                                     <span class="fa-stack fa-lg faa-parent animated-hover">
                                         <i class="fa fa-square fa-stack-2x"></i>
